--- a/src/SBBLite/SBBLite.csproj
+++ b/src/SBBLite/SBBLite.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Model\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Office.Interop.Outlook" Version="15.0.4797.1003" />
+  </ItemGroup>
+
 </Project>
